[gd_scene load_steps=2 format=3 uid="uid://cflqtvgcxfqjm"]

[ext_resource type="Script" path="res://scripts/activities/FillBlank.gd" id="1"]

[node name="FillBlank" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="InstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Fill in the blank with the correct word"
horizontal_alignment = 1

[node name="SentenceLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "The ______ cat explored every corner."
horizontal_alignment = 1
autowrap_mode = 3

[node name="AnswerInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
alignment = 1

[node name="SubmitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Submit"
